--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://118.31.2.207:3306/pydjc?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
+    #url: jdbc:mysql://192.168.20.2:3306/pydjc?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
     username: root
     password: root
     initialSize: 5
